# stellar

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  DORIS_COMPATIBILITY.md  Makefile  PERMISSION_MANAGEMENT_DESIGN.md  README.md  docker-compose-doris.yaml
backend/: Cargo.toml  build.rs  fix_clippy.sh  rust-toolchain.toml  rustfmt.toml
backend/migrations/: 00000000_initial_schema.sql  20250126000000_rbac_complete_permission_system.sql  20250128000000_add_llm_tables.sql  20250130000000_fix_system_functions_proc_paths.sql  20251210000000_add_sql_diagnose_permission.sql  20251214000000_merge_configs_and_blacklist.sql  20251219000000_add_cluster_type.sql  20251220000000_update_permission_requests_revoke_support.sql  20251222000000_add_db_auth_permissions.sql
backend/src/: config.rs  embedded.rs  lib.rs  main.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  backend.rs  cluster.rs  frontend.rs  llm.rs  materialized_view.rs  mod.rs  organization.rs  overview.rs  permission.rs  permission_request.rs  profile.rs  query.rs  query_history.rs  role.rs  sessions.rs  sql_diag.rs  system.rs  system_function.rs  system_management.rs  user.rs  user_role.rs  variables.rs
backend/src/middleware/: auth.rs  mod.rs  permission_extractor.rs
backend/src/models/: cluster.rs  mod.rs  organization.rs  permission.rs  permission_request.rs  role.rs  starrocks.rs  user.rs
backend/src/services/: audit_log_service.rs  auth_service.rs  baseline_refresh_task.rs  baseline_service.rs  casbin_service.rs  cluster_service.rs  data_statistics_service.rs  db_auth_query_service.rs  materialized_view_service.rs  metrics_collector_service.rs  mod.rs  mysql_client.rs  mysql_pool_manager.rs  organization_service.rs  overview_service.rs  permission_request_service.rs  permission_service.rs  (+5 more)
(+285 files in other folders)
