[package]
name = "stellar"
version = "1.0.0"
edition = "2024"

[lib]
name = "stellar"
path = "src/lib.rs"

[[bin]]
name = "stellar"
path = "src/main.rs"

# Lint configuration (following rustfs standard)
[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
mysql_async = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# HTTP client for StarRocks
reqwest = { version = "0.11", features = ["json"] }

# Configuration
dotenvy = "0.15"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# API documentation
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Utilities
once_cell = "1.19"
dashmap = "6.1"
urlencoding = "2.1"
uuid = { version = "1.6", features = ["v4"] }
async-trait = "0.1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Regex
regex = "1.10"

# Access Control
casbin = "2.7"

# Static file embedding
rust-embed = "8.0"

# Command line argument parsing
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]

